speedtest-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: speedtest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: speedtest
  name: speedtest
  namespace: speedtest
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: speedtest
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: speedtest
    spec:
      containers:
          image: openspeedtest/latest:latest
          name: openspeedtest
          ports:
            - containerPort: 3000
            - containerPort: 3001
          resources:
            limits:
              memory: "512Mi'
              cpu: "1000m"
      restartPolicy: Always
status: {}
