uptime-kuma-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
    traefik.docker.network: proxy
    traefik.enable: "true"
    traefik.http.middlewares.uptime-kuma-https-redirect.redirectscheme.scheme: https
    traefik.http.routers.uptime-kuma-secure.entrypoints: https
    traefik.http.routers.uptime-kuma-secure.rule: Host(`uptime-kuma.statesteel.loc`)
    traefik.http.routers.uptime-kuma-secure.service: uptime-kuma
    traefik.http.routers.uptime-kuma-secure.tls: "true"
    traefik.http.routers.uptime-kuma.entrypoints: http
    traefik.http.routers.uptime-kuma.middlewares: uptime-kuma-https-redirect
    traefik.http.routers.uptime-kuma.rule: Host(`uptime-kuma.statesteel.loc`)
    traefik.http.services.uptime-kuma.loadbalancer.server.port: "3001"
  creationTimestamp: null
  labels:
    io.kompose.service: uptime-kuma
  name: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: uptime-kuma
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
        traefik.docker.network: proxy
        traefik.enable: "true"
        traefik.http.middlewares.uptime-kuma-https-redirect.redirectscheme.scheme: https
        traefik.http.routers.uptime-kuma-secure.entrypoints: https
        traefik.http.routers.uptime-kuma-secure.rule: Host(`uptime-kuma.statesteel.loc`)
        traefik.http.routers.uptime-kuma-secure.service: uptime-kuma
        traefik.http.routers.uptime-kuma-secure.tls: "true"
        traefik.http.routers.uptime-kuma.entrypoints: http
        traefik.http.routers.uptime-kuma.middlewares: uptime-kuma-https-redirect
        traefik.http.routers.uptime-kuma.rule: Host(`uptime-kuma.statesteel.loc`)
        traefik.http.services.uptime-kuma.loadbalancer.server.port: "3001"
      creationTimestamp: null
      labels:
        io.kompose.network/proxy: "true"
        io.kompose.service: uptime-kuma
    spec:
      containers:
        - image: louislam/uptime-kuma:1
          name: uptime-kuma
          resources: {}
          volumeMounts:
            - mountPath: /app/data
              name: uptime-kuma-claim0
      restartPolicy: Always
      volumes:
        - name: uptime-kuma-claim0
          persistentVolumeClaim:
            claimName: uptime-kuma-claim0
status: {}
