speedtest-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: speedtest
  name: speedtest
  namespace: speedtest
spec:
  type: NodePort
  ports:
    - name: "80"
      port: 80
      targetPort: 3000
    - name: "443"
      port: 443
      targetPort: 3001
  selector:
    io.kompose.service: speedtest
status:
  loadBalancer: {}
